
   * Catch ShortReadvErrors while using pycurl. Also make readv more robust by
     allowing multiple GET requests to be issued if too many ranges are
     required.
     (Vincent Ladeuil, #172701)

   * Check for missing basis texts when fetching from packs to packs.
     (John Arbash Meinel, #165290)

   * Give more feedback during long http downloads by making readv deliver data
     as it arrives for urllib, and issue more requests for pycurl.
     (Vincent Ladeuil, #173010)

   * Fall back to showing e-mail in ``log --short/--line`` if the 
     committer/author has only e-mail. (Lukáš Lalinský, #157026)

   * Implement _make_parents_provider on RemoteRepository, allowing generating
     bundles against branches on a smart server.  (Andrew Bennetts, #147836)

  API BREAKS:

   * Deprecate not passing a ``location`` argument to commit reporters'
     ``started`` methods. (Matt Nordhoff)



bzr 1.0rc1 2007-11-30
=====================

  NOTES WHEN UPGRADING:

   * The default repository format is now ``pack-0.92``.  This 
     default is used when creating new repositories with ``init`` and 
     ``init-repo``, and when branching over bzr+ssh or bzr+hpss. 
     (See https://bugs.launchpad.net/bugs/164626)

     This format can be read and written by Bazaar 0.92 and later, and 
     data can be transferred to and from older formats.

     To upgrade, please reconcile your repository (``bzr reconcile``), and then
     upgrade (``bzr upgrade``). 
     
     ``pack-0.92`` offers substantially better scaling and performance than the
     previous knits format. Some operations are slower where the code already
     had bad scaling characteristics under knits, the pack format makes such
     operations more visible as part of being more scalable overall. We will
     correct such operations over the coming releases and encourage the filing
     of bugs on any operation which you observe to be slower in a packs